fixed for smaller phone sizes, or large size displays on mobile

--- a/src/static/styles/Header.css
+++ b/src/static/styles/Header.css
@@ -1,6 +1,55 @@
 /* Media Rules */
 
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 400px) {
+  .App-header {
+    flex-direction: column;
+  }
+
+  .kishek {
+    font-size: 8px;
+    height: 30px;
+  }
+
+  .header-title {
+    line-height: 0.6em;
+    font-size: 40px;
+    transition: 0.2s;
+  }
+
+  .App-header-text {
+    transition: 0.2s;
+    margin-top: 15%;
+  }
+
+  .header-description-text {
+    margin-top: 7.5%;
+    margin-left: 1.5%;
+    font-size: 16px;
+    transition: 0.2s;
+    white-space: nowrap;
+  }
+
+  .header-item {
+    padding: 5px 7.5px;
+    transition: 0.2s;
+    font-size: 8px;
+    font-weight: 500;
+  }
+
+  .App-header-photo {
+    width: 225px;
+    transition: 0.2s;
+    height: 300px;
+    margin-top: 30%;
+  }
+
+  .header-item-row {
+    height: 30px;
+    transition: 0.2s;
+    padding-right: 2px;
+  }
+}
+@media only screen and (min-width: 400px) {
   .App-header {
     flex-direction: column;
   }
@@ -70,6 +119,7 @@
   .App-header-text {
     margin-right: 10%;
     transition: 0.2s;
+    margin-top: 0%;
   }
 
   .header-description-text {
@@ -92,6 +142,7 @@
     width: 330px;
     transition: 0.2s;
     height: 440px;
+    margin-top: 0%;
   }
 
   .header-item-row {
@@ -239,6 +290,7 @@
   align-items: center;
   top: 0px;
   right: 0px;
+  left: 0px;
   width: 100vw;
   z-index: 4;
   background: rgb(255, 255, 255);
